Add initial version of NEWS2 DLM; Fix various typos and formatting.

--- a/docs/process_examples/master.adoc
+++ b/docs/process_examples/master.adoc
@@ -63,6 +63,7 @@ include::master07-cancer_prescribing.adoc[leveloffset=+1]
 include::master08-Covid19_severity.adoc[leveloffset=+1]
 include::master09-cha2ds_vasc.adoc[leveloffset=+1]
 include::master10-qrisk.adoc[leveloffset=+1]
+include::master11-news2.adoc[leveloffset=+1]
 include::master20-common_DLMs.adoc[leveloffset=+1]
 
 //
